# gpas_local_db

./: README.md  alembic.ini  db.py  env_template  models.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: build_release.yml  test.yml
User acceptance Testing/: user_acceptance_testing.md
docs/: database-layout.md  er-diagram.md
gpas_local/: cli.py  config.py  constants.py  db.py  models.py  upload_models.py
gpaslocal/: cli.py  config.py  constants.py  db.py  importer.py  logs.py  models.py  upload_models.py  utils.py
migrations/: env.py
migrations/versions/: 00689ba62afa_added_date_to_possible_valuetype.py  30977c91922f_storage_table.py  3fa077bb79a8_start.py  717f1cee6d7f_core_tables_first_draft.py  8a13068d82dc_lookup_data.py  97e10106ecf4_tirggers_for_updated_by_updated_at.py  9914ba1a02f5_triggers.py  9fb3e95467c1_lookup_table_data.py  db83a505ea75_increase_code_size.py
src/gpas/: cli.py  constants.py  models.py  upload_models.py
src/gpaslocal/: __init__.py  cli.py  config.py  constants.py  db.py  gpas_upload.py  importer.py  logs.py  models.py  requirements-dev.txt  upload_models.py
src/gpaslocal/migrations/: env.py
src/gpaslocal/migrations/versions/: 5ce093d2a6a5_refactor_storage.py  65638549e2b6_add_country_entries.py  74f145bf0bdc_flatten_specimen_details.py  8c1afc2aa455_auditing_versioning_of_tables.py  9914ba1a02f5_triggers.py  ac41a312c0cd_extra_sample_fields_and_countries.py  c695f567c4f1_add_batch_name_to_analyses.py  e045b65392ef_add_specimen_details_type_entries.py  f01fce5ded1d_nullable_sub_species_and_analysis_date_.py  f4183f1d16d9_flatten_other_details.py  f7e573c00e6b_other_types_lookup_data.py  fa75ffba1cf6_flatten_sample_details.py
src/gpaslocal/tests/: conftest.py  test_importer.py
